--- a/agenda/index.html
+++ b/agenda/index.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf8">
+        <meta name="viewport" content="widrh=device-width, initial-scale=1.0" />
         <title>Agenda</title>
         <link rel="stylesheet" href="base.css"/>
     </head>
