--- a/indice-inflabr/index.html
+++ b/indice-inflabr/index.html
@@ -15,7 +15,7 @@
         <section>
         <form method="post" action="" name="index">
             <fieldset class="index" id="index-name">
-                <ul>
+                <ul id="firlist">
                     <li>
                         <input type="radio" id="ipca" class="index" name="radioset" value="ipca" />
                         <label for="ipca">IPCA</label>
@@ -31,10 +31,10 @@
                 </ul>
             </fieldset>
             <fieldset class="index" id="main-fields">
-                <ul>
+                <ul id="seclist">
                     <li>
-                        <label for="index">ÍNDICE:</label>
-                        <input type="text" size="4" maxlength="4" pattern="[0-9]\,[0-9]{2}" id="index" />
+                        <label for="index">Índice:</label>
+                        <input type="text" size="4" maxlength="" pattern="[0-9]\,[0-9]{2}" id="index" />
                     </li>
                     <li>
                         <label for="month">Mês:</label>
@@ -55,23 +55,21 @@
                         </select>
                     </li>
                     <li>
-                    <label for="year">Ano</label>
+                    <label for="year">Ano:</label>
                     <select id="year" name="yer">
                         <option value="null" selected></option>
-                        <option value="2018">2018</option>
-                        <option value="2019">2019</option>
                         <option value="2020">2020</option>
+                        <option value="2019">2019</option>
+                        <option value="2018">2019</option>
                     </select>
                     </li>
-                    <li>
-                        <input type="submit" value="Gravar" />
-                    </li>
                 </ul>
+                <br> <input id="button" type="submit" value="Gravar" />
             </fieldset>
         </form>
         </section>
      </div>
  </div>
-    
+  
 </body>
 </html>
