--- a/indice-inflabr/index.html
+++ b/indice-inflabr/index.html
@@ -10,7 +10,7 @@
  <div name="page" class="page" id="">
      <div name="content" class="content">
         <header name="head" class="head">
-            <h1>Inflação Brasil</h1>
+            <h1>INFLAÇÃO<br>BRASIL</h1>
         </header>
         <section>
         <form method="post" action="" name="index">
@@ -34,7 +34,7 @@
                 <ul id="seclist">
                     <li>
                         <label for="index">Índice:</label>
-                        <input type="text" size="4" maxlength="" pattern="[0-9]\,[0-9]{2}" id="index" />
+                        <input type="text" size="4" maxlength="4"  pattern="[0-9]\,[0-9]{2}" id="index" />
                     </li>
                     <li>
                         <label for="month">Mês:</label>
