--- a/indice-inflabr/index.html
+++ b/indice-inflabr/index.html
@@ -13,19 +13,19 @@
             <h1>INFLAÇÃO<br>BRASIL</h1>
         </header>
         <section>
-        <form method="post" action="" name="index">
+        <form method="post" action="script.php" name="index">
             <fieldset class="index" id="index-name">
                 <ul id="firlist">
                     <li>
-                        <input type="radio" id="ipca" class="index" name="radioset" value="ipca" />
+                        <input type="radio" id="ipca" class="index" name="nomeindice" value="ipca" />
                         <label for="ipca">IPCA</label>
                     </li>
                     <li>
-                        <input type="radio" id="inpc" class="index" name="radioset" value="inpc" />
+                        <input type="radio" id="inpc" class="index" name="nomeindice" value="inpc" />
                         <label for="inpc">INPC</label>
                     </li>
                     <li>
-                        <input type="radio" id="igp-m" class="index" name="radioset" value="igp-m" />
+                        <input type="radio" id="igp-m" class="index" name="nomeindice" value="igp-m" />
                         <label for="igpm">IGP-M</label>
                     </li>
                 </ul>
@@ -34,7 +34,7 @@
                 <ul id="seclist">
                     <li>
                         <label for="index">Índice:</label>
-                        <input type="text" size="4" maxlength="4"  pattern="[0-9]\,[0-9]{2}" id="index" />
+                        <input type="text" size="4" maxlength="4" name="indice" pattern="[0-9]\,[0-9]{2}" id="index" />
                     </li>
                     <li>
                         <label for="month">Mês:</label>
@@ -56,7 +56,7 @@
                     </li>
                     <li>
                     <label for="year">Ano:</label>
-                    <select id="year" name="yer">
+                    <select id="year" name="year">
                         <option value="null" selected></option>
                         <option value="2020">2020</option>
                         <option value="2019">2019</option>
@@ -64,7 +64,7 @@
                     </select>
                     </li>
                 </ul>
-                <br> <input id="button" type="submit" value="Gravar" />
+                <br> <button id="button" type="submit">Gravar</button>
             </fieldset>
         </form>
         </section>
